packages/error/test/helpers/throw-inherited-error.js
const inheritedError =require( './inherited-error');

module.exports = () => {
  throw new inheritedError('message', 'code');
};
